<resources>
    <string name="ip_address">IP Address</string>
    <string name="api_key">API key</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_to_octoprint">Sign in to OctoPrint</string>
    <string name="port">Port</string>
    <string name="default_port">80</string>
    <string name="a_ip_address">an IP address</string>
    <string name="enter_a_valid_web_url">Enter a valid web URL</string>
    <string name="the_port">the port</string>
    <string name="only_digits">Only digits</string>
    <string name="an_api_key">an API key</string>
    <string name="please_enter_x">Please enter %s</string>
    <string name="loading">Loading…</string>
    <string name="welcome_to_octoapp">Welcome to OctoApp!</string>
    <string name="error_unable_to_connect"><![CDATA[
        Unable to connect to OctoPrint with the provided information.<br/><br/><small><font color="#%1$06X">%2$s</font></small>
    ]]></string>
    <string name="error_certificate_not_trusted"> Android does not trust the certificate provided by this server. This is usually the case for self signed certificates.\n\nDo you want to trust this server?</string>
    <string name="scan_the_qr_code">Scan the QR code</string>
    <string name="you_can_find_the_api_key_in_octoprint_s_settings_under_api">You can find the API key in OctoPrint\'s settings under API</string>
    <string name="you_can_find_the_api_key_in_octoprint_s_settings">You can find the API key in OctoPrint\'s settings</string>
    <string name="error_api_key_reported_invalid">OctoPrint reported your API key as invalid. Please sign in again.</string>
    <string name="warning_server_version_too_new">This app version was only tested with OctoPrint %1$s but you use %2$s</string>
    <string name="warning_no_admin_rights">The API key has no admin rights. Parts of the app may not work!</string>
    <string name="sign_in_succes_with_warnings"><b>Sign in succeeded but there were warnings:</b></string>
    <string name="web_url">Web URL</string>
    <string name="web_url_active_hint">Web URL — copy this from your browser!</string>
    <string name="api_key_active_hint">API key — from the OctoPrint settings</string>
    <string name="error_api_cotains_illegal_characters">The API key contains illegal characters</string>
    <string name="error_enter_api_key">Please enter an API key</string>
    <string name="trust_server_and_try_again">Trust server</string>
    <string name="go_back">Go back</string>
    <string name="settings_seem_correct">Your settings seem correct</string>
    <string name="all_checks_passed">All checks passed</string>
    <string name="check_again">Check again</string>
    <string name="running_check_x_of_y">Running Check %1$d of %2$d</string>
    <string name="step_1_description">Trying to resolve host...</string>
    <string name="step_2_description">Trying to ping host...</string>
    <string name="step_3_description">Trying to connect to port...</string>
    <string name="step_4_description">Trying to connect to OctoPrint...</string>
    <string name="trouble_shooting">Trouble shooting</string>
    <string name="no_wifi_warning_long">Your phone is not connected to WiFi. In many cases, OctoPrint is only available over WiFi.</string>
    <string name="sign_in_manual_link">Learn how to sign in</string>
</resources>