<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/focusTrap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <requestFocus />
    </View>

    <de.crysxd.octoapp.base.ui.common.OctoBackgroundView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="@+id/octoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/octoView" />

    <de.crysxd.octoapp.base.ui.common.OctoView
        android:id="@+id/octoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3"
        android:layout_marginTop="@dimen/margin_3"
        android:layout_marginEnd="@dimen/margin_3"
        android:ellipsize="none"
        android:singleLine="true"
        android:text="@string/sign_in"
        android:textAppearance="@style/OctoTheme.TextAppearance.Title.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/octoView" />

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_octoapp"
        android:textAppearance="@style/OctoTheme.TextAppearance.SubTitle"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <de.crysxd.octoapp.base.ui.common.OctoTextInputLayout
        android:id="@+id/inputApiKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_1"
        app:actionDrawable="@drawable/ic_qr_code_scanner_24px"
        app:label="@string/api_key"
        app:labelActive="@string/api_key_active_hint"
        app:layout_constraintEnd_toEndOf="@+id/inputWebUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputWebUrl" />

    <de.crysxd.octoapp.base.ui.common.OctoTextInputLayout
        android:id="@+id/inputWebUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_3"
        android:layout_marginEnd="@dimen/margin_2"
        app:example="http://192.168.1.42:5000"
        app:label="@string/web_url"
        app:labelActive="@string/web_url_active_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle" />

    <TextView
        android:id="@+id/manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_1"
        android:text="@string/sign_in_manual_link"
        app:layout_constraintEnd_toStartOf="@+id/focusTrap"
        app:layout_constraintStart_toStartOf="@+id/inputApiKey"
        app:layout_constraintTop_toBottomOf="@+id/inputApiKey" />

    <LinearLayout
        android:id="@+id/bottomAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manual"
        app:layout_constraintVertical_bias="1">

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/OctoTheme.Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_octoprint" />

        <Button
            android:id="@+id/buttonSignInWithMore"
            style="@style/OctoTheme.Widget.Button.WithMore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMore"
            style="@style/OctoTheme.Widget.Button.More"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:icon="@drawable/ic_round_swap_horiz_24" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>